--- a/pom.xml
+++ b/pom.xml
@@ -4,14 +4,14 @@
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
 
-    <groupId>de.bluewolf.mcplugin</groupId>
+    <groupId>net.example.mcplugin</groupId>
     <artifactId>mc-plugin-template</artifactId>
     <version>1.0-SNAPSHOT</version>
     <packaging>jar</packaging>
 
-    <name>Mc Plugin Template</name>
+    <name>mc-plugin-template</name>
 
-    <description>This is a template for Minecraft Spigot plugins</description>
+    <description>This is a template for Minecraft Spigot 1.18.1 plugins</description>
     <properties>
         <java.version>1.8</java.version>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
